Unify repository instructions and skills across agent CLIs
Keep Claude-specific configuration intact, document stopped-run evidence boundaries, and add a metadata-only run inventory.

Amp-Thread-ID: https://ampcode.com/threads/T-01a0d0d3-19ac-772b-b0af-b52812cae5c3
Co-authored-by: Amp <amp@ampcode.com>